fix spacing

--- a/general.css
+++ b/general.css
@@ -5,11 +5,12 @@ body{
 
 /*logo*/
 .topcontainer{
-	height: 880px;
+	height: 680px;
 }
 
 .logorow{
 	padding-top: 150px;
+	padding-bottom: 150px;
 }
 
 .logo{
